<resources>
    <string name="app_name">Verifier Application</string>
    <string name="Username">Username</string>
    <string name="PhoneNumber">10 Digit Phone Number</string>
    <string name="sendotp">Send OTP</string>
    <string name="otp">OTP</string>
    <string name="verify">Verify</string>
    <string name="_6_digit_number">6 Digit Number</string>
    <string name="title_activity_main_page">MainPage</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="scanned_data"></string>
</resources>